--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <footer>
       <p>© 2024 Hoang Cong Minh. All rights reserved.</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
